# HALLO_encoder_collection

./: .gitignore  Project overview.md  Project.md  README.md  pyproject.toml
dataset_download_scripts/: hear_my_ship_donwload.py
example_configs/: dclde_2027_source_tables.yaml
src/: config.py
src/dclde/source_tables/: __init__.py  annotations.py  audio.py  build_source_tables.py
