[project]
name = "hallo-encoder-collection"
version = "0.1.0"
description = "Shared dataset and encoder tooling for underwater acoustic tasks."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "pyarrow>=15",
  "pydantic>=2.7",
  "pyyaml>=6.0",
  "soundfile>=0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dclde"]
